# swe-knowledge-repo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  create_text_file_in_dirs.sh  requirements.txt  snake_walk.ipynb
.github/: labeler.yml
.github/workflows/: ci-primer.yml  pylint.yml
T-shape/apis/: apis_notes.md
T-shape/cloud-providers/aws/: README.md  s3.py
T-shape/infra-provisioning/terraform/: terraform.tfvars.template  variables.tf
T-shape/python/: _README.md  learnpython.py  py-interview-questions.md  pyproject.toml
T-shape/web-servers/nginx/: default.conf
python/: linters_formatters_sandbox.py  pyproject.toml  setup.cfg
python/frameworks/django/: django_demo_aws-ec2.md
python/reuven/: Question 1 — Mutable vs. immutable.ipynb  Question 2 — Highest square.ipynb
scripts/: Makefile  bash_quick_ref.md  bash_syntax.sh  create_database_and_user.sql
