[tool.poetry]
name = "swe-knowledge-repo"
version = "0.1.0"
description = "Yet another mega Python project"
authors = ["ivanprytula <ivanprytula87@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "swe_knowledge_repo"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
ruff = "^0.0.281"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-comprehensions = "^3.14.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
httpx = {extras = ["cli"], version = "^0.24.1"}
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-versions = ["py39", "py310", "py311",]

[tool.isort]
profile = "black"
line_length = 119
# known_first_party = [
#     "config",
# ]
skip_glob = ["**/migrations/*.py"]

[tool.ruff]
line-length = 119

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
# https://pylint.readthedocs.io/en/latest/user_guide/messages/refactor/too-few-public-methods.html#too-few-public-methods-r0903
disable = [
    "missing-docstring",
    "too-few-public-methods",
    # "invalid-name",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# Use visually nicer output in error messages.
pretty = "true"
# A comma-separated list of mypy plugins. It is used to add types for 3rd party libraries.
# plugins = [
#     "mypy_django_plugin.main",
#     "mypy_drf_plugin.main",
# ]

# [[tool.mypy.overrides]]
# Django migrations should not produce any errors:
# module = "*.migrations.*"
# ignore_errors = true
